force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustSiteOperatorsBldgMngr__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustSiteOperatorsBldgMngr__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Site OperatorsBuilding Managers</description>
    <inlineHelpText>Select the checkbox if team includes a site operators building manager.</inlineHelpText>
    <label>Site Operators Building Manager</label>
    <type>Checkbox</type>
</CustomField>