force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustSubcontractors__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustSubcontractors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Subcontractors</description>
    <inlineHelpText>Select the checkbox if team includes integrated subcontractors.</inlineHelpText>
    <label>Subcontractors</label>
    <type>Checkbox</type>
</CustomField>