force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustSustainabilityCnsltnt__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustSustainabilityCnsltnt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Sustainability Consultant</description>
    <inlineHelpText>Select the checkbox if team includes a sustainability consultant.</inlineHelpText>
    <label>Sustainability Consultant</label>
    <type>Checkbox</type>
</CustomField>