force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/LEEDCertificationLevel__c.field-meta.xml
<CustomField>
    <fullName>LEEDCertificationLevel__c</fullName>
    <description>LEED Registration Number</description>
    <inlineHelpText>LEED Registration Number</inlineHelpText>
    <label>Certification Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>