force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/LEEDCertificationLvl__c.field-meta.xml
<CustomField>
    <fullName>LEEDCertificationLvl__c</fullName>
    <description>LEED Certification Level</description>
    <inlineHelpText>Select the LEED Certification level actually obtained.</inlineHelpText>
    <label>Actual LEED Certification Level Obtained</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>