force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/LEEDExamptionCnt__c.field-meta.xml
<CustomField>
    <fullName>LEEDExamptionCnt__c</fullName>
    <description>The LEED Exemption Number</description>
    <inlineHelpText>The LEED Exemption Number</inlineHelpText>
    <label>KPM LEED Examption Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>