force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/LEEDExemptionDate__c.field-meta.xml
<CustomField>
    <fullName>LEEDExemptionDate__c</fullName>
    <description>The LEED Exemption Date</description>
    <inlineHelpText>Please select LEED exemption date for this building.</inlineHelpText>
    <label>Exemption Date</label>
    <type>Date</type>
</CustomField>