force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/LEEDRatingSys__c.field-meta.xml
<CustomField>
    <fullName>LEEDRatingSys__c</fullName>
    <description>LEED Rating System</description>
    <inlineHelpText>Please select LEED rating system for this building.</inlineHelpText>
    <label>LEED Rating System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Building Design and Construction</fullName>
            </value>
            <value>
                <fullName>Building Operations and Maintenance</fullName>
            </value>
            <value>
                <fullName>CommercialIndoors</fullName>
            </value>
            <value>
                <fullName>CoreAndShell</fullName>
            </value>
            <value>
                <fullName>ExistingBuildings:OperationsAndMaint</fullName>
            </value>
            <value>
                <fullName>Interior Design and Construction</fullName>
            </value>
            <value>
                <fullName>NewConstruction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>