force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/LEEDRegisteredWithUSGBC__c.field-meta.xml
<CustomField>
    <fullName>LEEDRegisteredWithUSGBC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEED Rating System</description>
    <inlineHelpText>Select the checkbox if project is registered with USGBC.</inlineHelpText>
    <label>Registered with USGBC</label>
    <type>Checkbox</type>
</CustomField>