force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/LEEDRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>LEEDRegistrationDate__c</fullName>
    <description>LEED Registration Date</description>
    <inlineHelpText>Please enter LEED Registration Date</inlineHelpText>
    <label>LEED Registration Date</label>
    <type>Date</type>
</CustomField>