force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/LEEDVersion__c.field-meta.xml
<CustomField>
    <fullName>LEEDVersion__c</fullName>
    <description>Version # for the rating system</description>
    <inlineHelpText>Please enter the LEED version number for this building.</inlineHelpText>
    <label>LEED Version Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>