force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/LocationCodePlus__c.field-meta.xml
<CustomField>
    <fullName>LocationCodePlus__c</fullName>
    <description>Formula field to pull in the location code.</description>
    <formula>BldgId__r.Location_Code_Plus__c</formula>
    <inlineHelpText>Formula field to PBS Buildings.</inlineHelpText>
    <label>Location Code Plus</label>
    <type>Text</type>
</CustomField>