force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/LsnsBestpracLesson1__c.field-meta.xml
<CustomField>
    <fullName>LsnsBestpracLesson1__c</fullName>
    <description>Text box for project lessons want to enter</description>
    <inlineHelpText>Enter project lessons learned</inlineHelpText>
    <label>Lesson 1</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>