force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/LsnsHumanisticStoriesStory1__c.field-meta.xml
<CustomField>
    <fullName>LsnsHumanisticStoriesStory1__c</fullName>
    <description>Text box for project humanistic stories want to enter</description>
    <inlineHelpText>Enter humanistic stories</inlineHelpText>
    <label>Story 1</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>