force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/LsnsPublicityContact__c.field-meta.xml
<CustomField>
    <fullName>LsnsPublicityContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enter POC if yes for Publicity Project has Rep</description>
    <inlineHelpText>Enter POC for publicity (if applicable )</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>gBUILD Project Buildings</relationshipLabel>
    <relationshipName>L_PBS_gBUILD_ProjectBuilding_2_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>