force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/LsnsSuccessStoriesStory3__c.field-meta.xml
<CustomField>
    <fullName>LsnsSuccessStoriesStory3__c</fullName>
    <description>Text box for project success stories want to enter</description>
    <inlineHelpText>Enter project success stories</inlineHelpText>
    <label>Story 3</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>