force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ModifiedReason__c.field-meta.xml
<CustomField>
    <fullName>ModifiedReason__c</fullName>
    <description>The reason this object was modified</description>
    <inlineHelpText>The reason this object was modified</inlineHelpText>
    <label>Last Modified Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>