force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/MVContractorName__c.field-meta.xml
<CustomField>
    <fullName>MVContractorName__c</fullName>
    <description>Name of M&amp;V contractor</description>
    <inlineHelpText>Please enter the name of the M&amp;V contractor for this building.</inlineHelpText>
    <label>Contractor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>