force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/MVNarr__c.field-meta.xml
<CustomField>
    <fullName>MVNarr__c</fullName>
    <description>Narrative about the M&amp;V process</description>
    <inlineHelpText>Please explain your project&apos;s M&amp;V approach/method and provide comments.</inlineHelpText>
    <label>M&amp;V Summary</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>