force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerfAnalBehavioralChangesNarr__c.field-meta.xml
<CustomField>
    <fullName>PerfAnalBehavioralChangesNarr__c</fullName>
    <inlineHelpText>Has occupant density, utilization, behavior, or space usage impacted energy performance? Any changes in overtime utility requests or energy awareness programs? E.g., replacing walled offices with open workspaces, more employees in the building, etc.</inlineHelpText>
    <label>Density/ usage/ behavior change impacts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>