force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerfAnalOperationalChangesNarr__c.field-meta.xml
<CustomField>
    <fullName>PerfAnalOperationalChangesNarr__c</fullName>
    <inlineHelpText>Address building/equipment schedule changes, set point changes, equipment/system tune-ups, and similar energy and water intensive system controls and operations settings completed throughout the performance period.</inlineHelpText>
    <label>Operational Changes and Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>