force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerfAnalReportedPerfNarr__c.field-meta.xml
<CustomField>
    <fullName>PerfAnalReportedPerfNarr__c</fullName>
    <inlineHelpText>Overall Comments on Reported Performance or Savings</inlineHelpText>
    <label>Reported Performance or Savings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>