force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutActualChilledWater__c.field-meta.xml
<CustomField>
    <fullName>PerffutActualChilledWater__c</fullName>
    <description>Actual Chilled Water</description>
    <label>Chilled Water (Ton-Hr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>