force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutActualElectric__c.field-meta.xml
<CustomField>
    <fullName>PerffutActualElectric__c</fullName>
    <description>Actual Electric</description>
    <label>Electric (kWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>