force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutActualGas__c.field-meta.xml
<CustomField>
    <fullName>PerffutActualGas__c</fullName>
    <description>Actual Gas</description>
    <label>Gas (Cubic Feet)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>