force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutActualOil__c.field-meta.xml
<CustomField>
    <fullName>PerffutActualOil__c</fullName>
    <description>Actual Oil</description>
    <label>Oil (Gallons)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>