force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutActualWater__c.field-meta.xml
<CustomField>
    <fullName>PerffutActualWater__c</fullName>
    <description>Actual water</description>
    <label>Water (Gallons)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>