force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutAnticAnnualEnergyCalculated__c.field-meta.xml
<CustomField>
    <fullName>PerffutAnticAnnualEnergyCalculated__c</fullName>
    <description>The calculated anticipated Energy Usage Intensity (EUI) derived from provided utilities above in kBTU/Sq. Ft./Year.</description>
    <formula>if(PerffutGsfAnticipated__c =0,null,(PerffutAnticTotAnnualEnergyCalculated__c/PerffutGsfAnticipated__c)*1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calculated anticipated Energy Usage Intensity (EUI) derived from provided utilities above in kBTU/Sq. Ft./Year.</inlineHelpText>
    <label>Anticipated Calculated EUI (kBTU/SqFt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>