force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutAnticChilledWater__c.field-meta.xml
<CustomField>
    <fullName>PerffutAnticChilledWater__c</fullName>
    <description>Annual Chilled Water Anticipated Performance</description>
    <inlineHelpText>Annual Chilled Water Anticipated Performance</inlineHelpText>
    <label>Chilled Water (Ton-Hr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>