force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutAnticElectric__c.field-meta.xml
<CustomField>
    <fullName>PerffutAnticElectric__c</fullName>
    <description>Annual Electric Anticipated Performance</description>
    <inlineHelpText>Annual Electric Anticipated Performance</inlineHelpText>
    <label>Electric (kWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>