force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutAnticEnergyConsumptionNarr__c.field-meta.xml
<CustomField>
    <fullName>PerffutAnticEnergyConsumptionNarr__c</fullName>
    <inlineHelpText>If you would like to include any additional information or details regarding your baseline or anticipated energy consumption or expected savings, please provide below.</inlineHelpText>
    <label>Energy Consumption Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>