force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutAnticEnergyConsumptionReduction__c.field-meta.xml
<CustomField>
    <fullName>PerffutAnticEnergyConsumptionReduction__c</fullName>
    <formula>if (
   Text(PerffutIsEuasReferenceYearRep__c)=&apos;Yes&apos;,
   if(EuasBaselinePerformanceYear__r.TotalEnergyBtu__c&lt;1,0,(EuasBaselinePerformanceYear__r.TotalEnergyBtu__c-PerffutAnticTotAnnualEnergyCalculated__c)/EuasBaselinePerformanceYear__r.TotalEnergyBtu__c),
   if(PerffutTotEnergy__c&lt;1,0,(PerffutTotEnergy__c-PerffutAnticTotAnnualEnergyCalculated__c)/PerffutTotEnergy__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Energy Consumption Reduction (%)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>