force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutAnticOil__c.field-meta.xml
<CustomField>
    <fullName>PerffutAnticOil__c</fullName>
    <description>Annual Oil Anticipated Performance</description>
    <inlineHelpText>Annual Oil Anticipated Performance</inlineHelpText>
    <label>Oil (Gallons)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>