force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutAnticSteam__c.field-meta.xml
<CustomField>
    <fullName>PerffutAnticSteam__c</fullName>
    <description>Annual Steam Anticipated Performance
The label on this field was updated as part of Case #00031490 from Steam (Mlb) to Steam (thousand lbs.)</description>
    <inlineHelpText>Annual Steam Anticipated Performance</inlineHelpText>
    <label>Steam (thousand lbs.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>