force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutAnticWater__c.field-meta.xml
<CustomField>
    <fullName>PerffutAnticWater__c</fullName>
    <description>Annual Water Anticipated Performance</description>
    <inlineHelpText>Annual Water Anticipated Performance</inlineHelpText>
    <label>Water (Gallons)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>