force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutCalculatedSimplePayback__c.field-meta.xml
<CustomField>
    <fullName>PerffutCalculatedSimplePayback__c</fullName>
    <description>Calculated Simple Payback</description>
    <inlineHelpText>Enter calculated simple payback.</inlineHelpText>
    <label>Calculated Simple Payback (Years)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>