force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutCostsElectric__c.field-meta.xml
<CustomField>
    <fullName>PerffutCostsElectric__c</fullName>
    <description>Electric Cost kWh</description>
    <inlineHelpText>Electric Cost kWh</inlineHelpText>
    <label>Electric Utility Rate ($/kWh)</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>