force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutCostsGas__c.field-meta.xml
<CustomField>
    <fullName>PerffutCostsGas__c</fullName>
    <description>Gas Cost CuFT</description>
    <inlineHelpText>Gas Cost CuFT</inlineHelpText>
    <label>Gas Utility Rate ($/Cubic Ft)</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>