force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutCostsOil__c.field-meta.xml
<CustomField>
    <fullName>PerffutCostsOil__c</fullName>
    <description>Oil Cost Gallons</description>
    <inlineHelpText>Oil Cost Gallons</inlineHelpText>
    <label>Oil Utility Rate ($/Gallons)</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>