force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutCostsSteam__c.field-meta.xml
<CustomField>
    <fullName>PerffutCostsSteam__c</fullName>
    <description>Stream Costs Mlb</description>
    <inlineHelpText>Stream Costs Mlb</inlineHelpText>
    <label>Steam Utility Rate ($/Mlb)</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>