force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutCostsWater__c.field-meta.xml
<CustomField>
    <fullName>PerffutCostsWater__c</fullName>
    <description>Water Cost / Gallon</description>
    <inlineHelpText>Water Cost / Gallon</inlineHelpText>
    <label>Water Utility Rate ($/Gallon)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>