force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutEcmTotCost__c.field-meta.xml
<CustomField>
    <fullName>PerffutEcmTotCost__c</fullName>
    <description>ECM Total Cost</description>
    <inlineHelpText>Enter total cost of ECM.</inlineHelpText>
    <label>ECM Total Cost ($) ($)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>