force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutFinanceContractorMarkup__c.field-meta.xml
<CustomField>
    <fullName>PerffutFinanceContractorMarkup__c</fullName>
    <description>Finance Contractor Markup</description>
    <inlineHelpText>Enter contractor markup percentage</inlineHelpText>
    <label>Finance Contractor Markup (%)</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>