force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutGsf__c.field-meta.xml
<CustomField>
    <fullName>PerffutGsf__c</fullName>
    <description>User provided baselin GSF</description>
    <inlineHelpText>Enter baseline building gross square footage information.</inlineHelpText>
    <label>Baseline Gross Square Feet (GSF)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>