force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutGsfAnticipated__c.field-meta.xml
<CustomField>
    <fullName>PerffutGsfAnticipated__c</fullName>
    <description>The anticipated GSF after the completion of this project</description>
    <inlineHelpText>The anticipated GSF after the completion of this project (If other than &quot;unchanged&quot; above)</inlineHelpText>
    <label>GSF Anticipated</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>