force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutGsfComments__c.field-meta.xml
<CustomField>
    <fullName>PerffutGsfComments__c</fullName>
    <description>Comments regarding any change in the GSF</description>
    <inlineHelpText>Comments regarding any change in the GSF</inlineHelpText>
    <label>GSF Comments</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>