force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutImplementationPrice__c.field-meta.xml
<CustomField>
    <fullName>PerffutImplementationPrice__c</fullName>
    <description>Implementation Price</description>
    <inlineHelpText>Implementation Price</inlineHelpText>
    <label>Implementation Price ($)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>