force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutIsEuasDataAccurate__c.field-meta.xml
<CustomField>
    <fullName>PerffutIsEuasDataAccurate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Is EUAS Data Accurate</description>
    <inlineHelpText>Select checkbox to verify EUAS data is accurate.</inlineHelpText>
    <label>Is EUAS Data Accurate</label>
    <type>Checkbox</type>
</CustomField>