force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutOil__c.field-meta.xml
<CustomField>
    <fullName>PerffutOil__c</fullName>
    <description>User provided baselin Oil</description>
    <inlineHelpText>Enter baseline oil usage (gallon).</inlineHelpText>
    <label>Oil (Gallons)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>