force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutTotAnnualCostSav__c.field-meta.xml
<CustomField>
    <fullName>PerffutTotAnnualCostSav__c</fullName>
    <description>Total Annual Cost Savings</description>
    <inlineHelpText>Enter total annual cost savings in dollars per year.</inlineHelpText>
    <label>Total Annual Cost Savings ($)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>