force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutTotEnergy__c.field-meta.xml
<CustomField>
    <fullName>PerffutTotEnergy__c</fullName>
    <description>Calculated Total Energy (based on inputs)</description>
    <formula>((PerffutChilledWater__c * 12000) + (PerffutElectric__c*3412.142) + (PerffutGas__c * 1031) + (PerffutOil__c * 138700) + (PerffutSteam__c * 1000000)) / 1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated total energy based on inputs (MMBTU/yr).</inlineHelpText>
    <label>Total Energy (MMBTU)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>