force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutUtilitySav__c.field-meta.xml
<CustomField>
    <fullName>PerffutUtilitySav__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Anticipated savings when calculated at a project building level</description>
    <inlineHelpText>Enter calculated building-level utility savings (Btu/yr).</inlineHelpText>
    <label>Utility Savings Anticipated</label>
    <referenceTo>PBS_gBUILD_UtilitySavings__c</referenceTo>
    <relationshipLabel>gBUILD Project Buildings</relationshipLabel>
    <relationshipName>L_PBS_gBUILD_ProjectBuilding_2_PBS_gBUIL</relationshipName>
    <type>Lookup</type>
</CustomField>