force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutUtilitySavContextType__c.field-meta.xml
<CustomField>
    <fullName>PerffutUtilitySavContextType__c</fullName>
    <description>The context for which savings are calculated</description>
    <inlineHelpText>Select the utility savings context type.</inlineHelpText>
    <label>Utility Savings Context Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ImpactScopeLevel</fullName>
            </value>
            <value>
                <fullName>ImpactBuildingLevel</fullName>
            </value>
            <value>
                <fullName>PerformanceBuildingLevel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>