force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/PerffutWater__c.field-meta.xml
<CustomField>
    <fullName>PerffutWater__c</fullName>
    <description>User provided baselin Water</description>
    <inlineHelpText>Enter baseline water usage (annual)</inlineHelpText>
    <label>Water (Gallons)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>