force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnBlineGreenProductsEasyProcure__c.field-meta.xml
<CustomField>
    <fullName>ProjturnBlineGreenProductsEasyProcure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Green Products Easy To Procure</description>
    <inlineHelpText>Check if green products were easy to procure.</inlineHelpText>
    <label>Green Products Easy To Procure</label>
    <type>Checkbox</type>
</CustomField>