force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnBlineKpmAntEnergyIntnstyCnfrm__c.field-meta.xml
<CustomField>
    <fullName>ProjturnBlineKpmAntEnergyIntnstyCnfrm__c</fullName>
    <description>KPM Anticipated Energy Intensity Confirmed</description>
    <inlineHelpText>If Central Office selected this for GSA&apos;s collaborative Light-Touch M&amp;V review, enter planned or actual start. L-T M&amp;V brings in building O&amp;M staff to learn how/why actual energy usage intensity compares to design target, and optimize performance.</inlineHelpText>
    <label>GSA Light-Touch M&amp;V Process start date</label>
    <type>Date</type>
</CustomField>