force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnBlineKpmOccSpaceUseComments__c.field-meta.xml
<CustomField>
    <fullName>ProjturnBlineKpmOccSpaceUseComments__c</fullName>
    <description>KPM Occupancy Space Use Comments</description>
    <inlineHelpText>Please enter status and/or findings from GSA’s Light-Touch Measurement &amp; Verification performance review process. Any insights/ lessons learned re: design, construction, equipment, commissioning, weather, or tenant factors impacting energy usage?</inlineHelpText>
    <label>Light-Touch M&amp;V Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>