force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnComishIsMvPlanComplete__c.field-meta.xml
<CustomField>
    <fullName>ProjturnComishIsMvPlanComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Commissioning Is MV Plan Complete</description>
    <inlineHelpText>Please check if measurement and verification plan is complete.</inlineHelpText>
    <label>Is M&amp;V Plan Complete</label>
    <type>Checkbox</type>
</CustomField>