force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnComishPlannedCertification__c.field-meta.xml
<CustomField>
    <fullName>ProjturnComishPlannedCertification__c</fullName>
    <description>Commissioning Planned Certification Date</description>
    <inlineHelpText>Please enter commissioning planned certification date.</inlineHelpText>
    <label>Planned Cx Certification Date</label>
    <type>Date</type>
</CustomField>