force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnComishPlannedStart__c.field-meta.xml
<CustomField>
    <fullName>ProjturnComishPlannedStart__c</fullName>
    <description>Commissioning Planned Start Date</description>
    <inlineHelpText>Please enter commissioning plan start date.</inlineHelpText>
    <label>Planned Cx Start Date</label>
    <type>Date</type>
</CustomField>