force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnComishSysManual__c.field-meta.xml
<CustomField>
    <fullName>ProjturnComishSysManual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Commissioning Systems Manual</description>
    <inlineHelpText>Was the systems manual part of the commissioning agent&apos;s scope?</inlineHelpText>
    <label>Systems Manual</label>
    <type>Checkbox</type>
</CustomField>