force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnDsgnIntBlineEnvelopeNarr__c.field-meta.xml
<CustomField>
    <fullName>ProjturnDsgnIntBlineEnvelopeNarr__c</fullName>
    <description>Narrative description of the intents of the Envelope Scope (if part of the Project scope)</description>
    <inlineHelpText>Please provide the original design intent in relation to the listed scope categories.</inlineHelpText>
    <label>Envelope Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>