force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnDsgnIntBlineRenergyNarr__c.field-meta.xml
<CustomField>
    <fullName>ProjturnDsgnIntBlineRenergyNarr__c</fullName>
    <description>Narrative description of the intents of the Renewable Energy Scope (if part of the Project scope)</description>
    <inlineHelpText>Please provide the original design intent in relation to the listed scope categories.</inlineHelpText>
    <label>Renewable Energy Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>